# credit-risk-model

./: .coverage  .dockerignore  .gitignore  README.md  dvc.yaml  init_setup.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: data.yaml  features.yaml  train.yaml
configs/: api.yaml  data.yaml  features.yaml  model.yaml  proxy.yaml
data/processed/: .gitignore
docker/: Dockerfile  docker-compose.yml
notebooks/: eda.ipynb  features.ipynb  modeling.ipynb  rfm.ipynb
scripts/: run_api.sh  run_clean.py  run_features.py  run_training.py  run_training.sh
src/credit_risk_model/api/: main.py  pydantic_models.py  utils.py
src/credit_risk_model/core/: config.py  settings.py
src/credit_risk_model/data/: data_cleaning.py  load_data.py  pipeline.py  rfm.py  splitter.py
src/credit_risk_model/eda/: eda.py
src/credit_risk_model/features/: aggregate.py  datetime.py  feature_pipeline.py  woe_iv.py
src/credit_risk_model/models/: evaluate.py  factory.py  plots.py  register.py  train.py  tuning.py
src/credit_risk_model/utils/: project_root.py  validation.py
src/credit_risk_model/viz/: plots.py
tests/: test_feature_engineering.py  test_model_training.py
